fixtures/typescript/choke-point/should_fail/testImportInRuntime.ts
import { jest } from 'jest';
import { render } from '@testing-library/react';

// Test imports in production code
